# CigerNesting

./: .gitignore  CMakeLists.txt  PROJECT_HEALTH_AUDIT.md  README.md  benchmark_results.csv  build_msvc.bat  source_inventory.md
NestingApp/: CMakeLists.txt
NestingApp/app/: main.cpp  main_window.cpp  main_window.h  win32_app.cpp  win32_app.h
NestingApp/bridge/: corel_bridge.cpp  corel_bridge.h  session_format.cpp  session_format.h
NestingApp/core/: aabb.h  document.h  mat2.h  math_utils.h  part.h  path.h  polygon.h  sheet.h  transform.h  units.h  vec2.h
NestingApp/engine/: acceptance.cpp  acceptance.h  adaptive_acceptance.cpp  adaptive_acceptance.h  adaptive_optimizer.cpp  adaptive_optimizer.h  aggressive_gap_filler.cpp  aggressive_gap_filler.h  analytic_contact_candidate.cpp  analytic_contact_candidate.h  broadphase.cpp  broadphase.h  candidate_cache.h  compression.cpp  compression.h  constructive_rebuild_engine.cpp  constructive_rebuild_engine.h  contact_candidate_provider.cpp  contact_candidate_provider.h  contact_packing.cpp  contact_packing.h  convergence.cpp  convergence.h  destroy_rebuild.cpp  destroy_rebuild.h  empty_space_map.cpp  empty_space_map.h  engine_settings.h  escape_search.cpp  escape_search.h  free_space_analyzer.cpp  free_space_analyzer.h  frontier_analyzer.cpp  frontier_analyzer.h  gap_filling.cpp  gap_filling.h  gpu_evaluator.h  guided_local_search.cpp  guided_local_search.h  inner_fit_candidate_provider.cpp  (+48 more)
NestingApp/geometry/: arc.cpp  arc.h  bezier.cpp  bezier.h  clearance.cpp  clearance.h  collision.cpp  collision.h  flatten.cpp  flatten.h  inner_fit_polygon.cpp  inner_fit_polygon.h  minkowski_sum.cpp  minkowski_sum.h  no_fit_polygon.cpp  no_fit_polygon.h  polygon_offset.cpp  polygon_offset.h  polygon_utils.cpp  polygon_utils.h  spatial_grid.cpp  spatial_grid.h  transformed_shape.cpp  transformed_shape.h  winding.cpp  winding.h
NestingApp/import/: dxf_parser.cpp  dxf_parser.h  import_result.h  importer.cpp  importer.h  plt_parser.cpp  plt_parser.h  svg_parser.cpp  svg_parser.h
NestingApp/localization/: localization.cpp  localization.h
NestingApp/render/: gdi_renderer.cpp  gdi_renderer.h  renderer.cpp  renderer.h
NestingApp/resources/: CigerNesting.rc  resource.h
NestingApp/tests/: acceptance_model_smoke.cpp  active_contact_depth_smoke.cpp  adaptive_part_need_smoke.cpp  analytic_contact_candidate_smoke.cpp  architecture_audit_smoke.cpp  beam_search_quality_smoke.cpp  benchmark_consistency_smoke.cpp  benchmark_runner.cpp  clearance_smoke.cpp  cluster_compaction_smoke.cpp  cluster_reinsert_quality_smoke.cpp  collision_tests.cpp  constructive_rebuild_smoke.cpp  contour_interlock_smoke.cpp  contour_locking_nfp_smoke.cpp  convergence_quality_smoke.cpp  convergence_smoke.cpp  coordinated_cluster_motion_smoke.cpp  delta_score_smoke.cpp  dense_nfp_packing_smoke.cpp  dense_small_part_compaction_smoke.cpp  destroy_best_update_smoke.cpp  destroy_rebuild_smoke.cpp  dirty_region_render_smoke.cpp  empty_region_targeting_smoke.cpp  escape_smoke.cpp  fake_stats_guard_smoke.cpp  fit_candidate_generation_smoke.cpp  gap_filling_smoke.cpp  geometry_collision_smoke.cpp  geometry_tests.cpp  hole_aware_nfp_smoke.cpp  industrial_quality_smoke.cpp  inner_fit_candidate_provider_smoke.cpp  inner_fit_polygon_smoke.cpp  large_scale_quality_smoke.cpp  local_region_repack_smoke.cpp  minkowski_sum_smoke.cpp  multi_delta_smoke.cpp  multi_part_constructive_quality_smoke.cpp  (+22 more)
NestingApp/ui/: canvas_view.cpp  canvas_view.h  control_ids.h  layout.cpp  layout.h  left_panel.cpp  left_panel.h  progress_bar.cpp  progress_bar.h  right_panel.cpp  right_panel.h  toolbar.cpp  toolbar.h
outputs/benchmark/: b_shape_hole_usage_balanced.cignest.json  b_shape_hole_usage_fast.cignest.json  b_shape_hole_usage_maximum.cignest.json  benchmark_results.csv  concave_cavity_usage_balanced.cignest.json  concave_cavity_usage_fast.cignest.json  concave_cavity_usage_maximum.cignest.json  donut_hole_usage_balanced.cignest.json  donut_hole_usage_fast.cignest.json  donut_hole_usage_maximum.cignest.json  irregular_sheet_with_hole_balanced.cignest.json  irregular_sheet_with_hole_fast.cignest.json  irregular_sheet_with_hole_maximum.cignest.json  many_small_parts_balanced.cignest.json  many_small_parts_fast.cignest.json  many_small_parts_maximum.cignest.json  mirror_required_balanced.cignest.json  mirror_required_disabled_balanced.cignest.json  mirror_required_fast.cignest.json  mirror_required_maximum.cignest.json  mixed_100_parts_balanced.cignest.json  mixed_100_parts_fast.cignest.json  mixed_100_parts_maximum.cignest.json  mixed_250_parts_balanced.cignest.json  mixed_250_parts_fast.cignest.json  mixed_250_parts_maximum.cignest.json  mixed_500_parts_balanced.cignest.json  mixed_500_parts_fast.cignest.json  mixed_500_parts_maximum.cignest.json  rotation_precision_required_balanced.cignest.json  rotation_precision_required_fast.cignest.json  rotation_precision_required_maximum.cignest.json
samples/: simple_dxf.dxf  simple_plt.plt
